<?xml version="1.0"?>
<package format="3">
  <name>database</name>
  <version>0.1.0</version>
  <description>ROS 2 database service node migrated from ROS 1.</description>
  <maintainer email="lex.vyshnevskyy@gmail.com">Oleksii Vyshnevskyi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-mysql.connector</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
